[package]
name = "lab_8_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dotenv = "0.15.0"
sqlx = {version = "0.7.3", features = ["runtime-tokio", "mysql", "chrono"]}
tokio = {version = "1.34.0", features = ["macros", "rt-multi-thread"]}
[dev-dependencies]
sqlx-cli = "0.7.3"
